--- a/JavaScript/2025-12/copilot05/style.css
+++ b/JavaScript/2025-12/copilot05/style.css
@@ -6,8 +6,8 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    width: 300px;
+    justify-content: center;
+    width: 600px;
     max-width: 90%;
 }
 
