Figmaからのコーディングできた！不備あり！！

--- a/模写コーディング/模写修行-中級２/CSS/common.css
+++ b/模写コーディング/模写修行-中級２/CSS/common.css
@@ -1,8 +1,8 @@
 :root {
     --bg-base: #FAFAFA;
     --bg-primary: #C7A26C;
-    --bg-primary-light: #C7A26C;
-    --bg-primary-extra-light: #C7A26C;
+    --bg-primary-light: rgba(199, 162, 108, 0.35);
+    --bg-primary-extra-light: rgba(199, 162, 108, 0.05);
     --bg-secondary: #52442F;
     --bg-black: #333333;
     --bg-white: #FFFFFF;
@@ -26,4 +26,13 @@ body {
 .container {
     width: min(90%, 1000px);
     margin-inline: auto;
+}
+
+.section-title {
+    font-size: 32px;
+    font-weight: bold;
+    color: var(--font-primary);
+    text-align: center;
+    line-height: 1.75;
+    margin-bottom: 40px;
 }
